--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                             </ul>
                         </div>
                         <div class="header-btn">
-                            <a href="https://poocoin.app/tokens/0x81d60ad757634e77d7ac321a90530eb6f0b71fa3" class="flex-btn">
+                            <a href="https://pancakeswap.finance/swap?outputCurrency=0xf1F0db797F89FF34CDc1Ce7006E80E8D45873EC3" class="flex-btn">
                                 Buy now
                             </a>
                         </div>
@@ -85,12 +85,7 @@
                         <a href="#" class="menu-link">
                             FAQ's
                         </a>
-                    </li>
-                    <li class="menu-item">
-                        <a href="https://github.com/Saferico/Bitcoin-City-Coin-smart-contract-audit/blob/main/Bitcoin%20City%20Coin%20smart%20contract%20security%20Audit.pdf" class="menu-link">
-                            Audit
-                        </a>
-                    </li>
+                   
                     <li class="menu-item">
                         <a href="#" class="menu-link">
                             Marketplace
@@ -99,7 +94,7 @@
                 </ul>
             </div>
             <div class="header-btn">
-                <a href="https://poocoin.app/tokens/0x81d60ad757634e77d7ac321a90530eb6f0b71fa3" class="flex-btn">
+                <a href="https://pancakeswap.finance/swap?outputCurrency=0xf1F0db797F89FF34CDc1Ce7006E80E8D45873EC3" class="flex-btn">
                     Buy now
                 </a>
             </div>
@@ -117,7 +112,7 @@
                             Dubai City is the city of your dreams. Politics without taxes and corruption. We are 101% SAFU. 
                         </p>
                         <div class="head-btns">
-                            <a href="https://discord.gg/Xzr4gg5Qub" class="flex-btn head-btn-one">
+                            <a href="https://t.me/dubaicitycoin" class="flex-btn head-btn-one">
                                 <div class="head-btn-icon">
                                     <img src="images/img-dis-icon.png" alt="">
                                 </div>
@@ -125,7 +120,7 @@
                                     join Telegram
                                 </div>
                             </a>
-                            <a href="https://twitter.com/bitcoinCityMeta" class="flex-btn head-btn-two">
+                            <a href="https://twitter.com/dubaicitycoin" class="flex-btn head-btn-two">
                                 <div class="head-btn-icon">
                                     <img src="images/img-twit-icon.png" alt="">
                                 </div>
@@ -383,14 +378,14 @@
                                 <img src="images/img-team-a.png" alt="">
                             </div>
                             <p class="six-inner-title">
-                                Mr. Ari
+                                Mr. Mohammed
                             </p>
                             <p class="six-inner-text">
                                 (Digital Artist)
                             </p>
                             <a href="#" class="six-inner-link">
                                 <div class="six-inner-link-text">
-                                    BC | Ch. business
+                                    DC | Ch. business
                                 </div>
                                 <div class="six-inner-link-object">
                                     <img src="images/img-right-arrow.png" alt="">
@@ -402,14 +397,14 @@
                                 <img src="images/img-team-b.png" alt="">
                             </div>
                             <p class="six-inner-title">
-                                Mrs. Genji
+                                Mrs. Fatima
                             </p>
                             <p class="six-inner-text">
                                 (2D artist)
                             </p>
                             <a href="#" class="six-inner-link">
                                 <div class="six-inner-link-text">
-                                    BC | Jr. police officer
+                                    DC | Jr. police officer
                                 </div>
                                 <div class="six-inner-link-object">
                                     <img src="images/img-right-arrow.png" alt="">
@@ -421,14 +416,14 @@
                                 <img src="images/img-team-c.png" alt="">
                             </div>
                             <p class="six-inner-title">
-                                Mr. Palmar
+                                Mr. Rashid
                             </p>
                             <p class="six-inner-text">
                                 (Developer)
                             </p>
                             <a href="#" class="six-inner-link">
                                 <div class="six-inner-link-text">
-                                    BC | Mayor's assistant
+                                    DC | Mayor's assistant
                                 </div>
                                 <div class="six-inner-link-object">
                                     <img src="images/img-right-arrow.png" alt="">
@@ -452,11 +447,11 @@
                 </div>
                 <div class="col-md-8 col-12">
                     <div class="f-soc">
-                        <a href="https://t.me/bitcoinCityCoin" class="f-soc-item">
+                        <a href="https://t.me/dubaicitycoin" class="f-soc-item">
                             <img src="images/img-soc-one.png" alt="">
                         </a>
                        
-                        <a href="https://twitter.com/bitcoinCityMeta" class="f-soc-item">
+                        <a href="https://twitter.com/dubaiCityMeta" class="f-soc-item">
                             <img src="images/img-soc-four.png" alt="">
                         </a>
                     </div>
